Fixed all forms on front end and added maternal demographics data visibility on profile page

--- a/src/App.css
+++ b/src/App.css
@@ -440,3 +440,7 @@ body {
   font-weight: bold; /* Make the text bold */
   z-index: 10; /* Ensure it's above other elements */
 }
+
+.answer {
+  font-weight: normal;
+}
